--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,40 @@
 {
     "name": "BSNL FTTH Admin Login",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "version": "1.0",
     "description": "Automatically login to BSNL FTTH Admin",
-    "browser_action": {
+    "action": {
+        "default_title": "BSNL FTTH Admin Login",
         "default_popup": "popup.html",
         "default_icon": "/images/logo.png"
     },
     "icons": {
         "128": "/images/logo.png"
-       
     },
-    "permissions":[
+    "permissions": [
         "activeTab",
-        "storage",
-        "tabs",
-        "bookmarks"
+        "storage"
     ],
-    "background": {
-        "scripts": [
-            "background.js"
-        ],
-        "persistent": false
-    },
-
-  "content_scripts": [{
-    "js": ["js/main.js"],
-    "matches": ["http://192.168.1.1/admin/login.asp"]
-  }]
+    "host_permissions": [
+        "http://192.168.1.1/admin/login.asp",
+        "*://*/*"
+      ],
+    "content_scripts": [
+        {
+            "js": [
+                "js/background.js"
+            ],
+            "matches": [
+                "http://192.168.1.1/admin/login.asp"
+            ]
+        },
+        {
+            "js": [
+                "js/background_error_login.js"
+            ],
+            "matches": [
+                "http://192.168.1.1/boaform/admin/formLogin"
+            ]
+        }
+    ]
 }
